update something new

--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -1,70 +1,47 @@
-<div
-  class="w-full min-h-full flex flex-col items-center py-20 px-4 bg-gray-100"
->
+<div class="w-full min-h-full flex flex-col items-center bg-gray-100">
   <div
-    class="w-full max-w-md min-h-[500px] rounded-md sm:shadow-base sm:bg-white sm:px-9 sm:py-12"
+    class="w-full max-w-7xl px-4 flex flex-col gap-14 items-center justify-start pb-12 pt-4"
   >
-    <div class="mb-4 flex">
-      <button type="button" class="text-gray-400" (click)="back()">
-        <mat-icon
-          class="icon-size-7"
-          [svgIcon]="'mat_outline:arrow_back'"
-        ></mat-icon>
-      </button>
+    <div class="flex justify-between items-center w-full">
+      <div class="font-bold text-gray-900 text-xl">Vietspeak</div>
+      <div class="flex items-center gap-2">
+        <div class="text-gray-400">Already have an account?</div>
+        <button
+          class="btn--sm"
+          mat-flat-button
+          [color]="'primary'"
+          routerLink="/login"
+        >
+          Login
+        </button>
+      </div>
     </div>
-
-    <ng-container *ngIf="!isSent">
-      <div class="font-medium text-gray-900 text-2xl text-center">
-        Quên mật khẩu
+    <div
+      class="w-full max-w-md rounded-md sm:shadow sm:px-12 sm:py-12 sm:bg-white"
+    >
+      <div class="font-semibold text-gray-900 text-2xl mb-1">
+        Forgot password
       </div>
-      <div class="mt-6">
-        <p class="text-gray-500 text-base mb-8">
-          {{ "Hệ thống sẽ gửi một đường link để đặt lại mật khẩu vào email" }}
-          <span class="font-medium text-gray-800"
-            >nguyenchinhhiep95@gmail.com</span
-          >
-        </p>
+      <div class="text-secondary">Fill the form to reset your password</div>
 
-        <app-button
-          [type]="'button'"
-          [variant]="'primary'"
-          [classes]="'w-full'"
-          [disabled]="loading"
-          (clicked)="sendReset()"
+      <form class="mt-8" [formGroup]="form" (ngSubmit)="submit()">
+        <mat-form-field appearance="fill" class="w-full">
+          <mat-label>Email</mat-label>
+          <input matInput formControlName="email" />
+          <mat-error>This field is required</mat-error>
+        </mat-form-field>
+
+        <button
+          class="w-full !mt-2 btn--lg"
+          mat-flat-button
+          [color]="'primary'"
         >
-          Đặt lại mật khẩu</app-button
-        >
-      </div>
-    </ng-container>
-
-    <ng-container *ngIf="isSent">
-      <div class="flex justify-center mb-4">
-        <mat-icon
-          class="text-success icon-size-24"
-          [svgIcon]="'mat_outline:check_circle'"
-        ></mat-icon>
-      </div>
-
-      <div class="font-medium text-gray-800 text-2xl text-center">
-        Gửi thành công
-      </div>
-      <div class="mt-6">
-        <p class="text-gray-500 text-base mb-8">
-          {{
-            "Một đường link đặt lại mật khẩu đã được gửi đến email, vui lòng kiểm tra hộp thư đến của bạn."
-          }}
-        </p>
-
-        <app-button
-          [type]="'button'"
-          [variant]="'primary'"
-          [classes]="'w-full'"
-          [disabled]="loading"
-          (clicked)="sendReset()"
-        >
-          Quay lại đăng nhập</app-button
-        >
-      </div>
-    </ng-container>
+          Reset password
+        </button>
+        <div class="text-hint mt-6 text-center">
+          Back to <a routerLink="/login">Login</a>
+        </div>
+      </form>
+    </div>
   </div>
 </div>
