--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,60 +1,82 @@
-<div
-  class="w-full min-h-full flex flex-col items-center py-20 px-4 bg-gray-100"
->
+<div class="w-full min-h-full flex flex-col items-center bg-gray-100">
   <div
-    class="w-full max-w-md min-h-[500px] rounded-md sm:shadow-base sm:px-9 sm:py-12 bg-white"
+    class="w-full max-w-7xl px-4 flex flex-col gap-14 items-center justify-start pb-12 pt-4"
   >
-    <div class="font-semibold text-gray-900 text-2xl mb-2">Login</div>
-
-    <form class="mt-8" [formGroup]="form" (ngSubmit)="submit()">
-      <mat-form-field appearance="fill" class="w-full">
-        <mat-label>Email</mat-label>
-        <input matInput formControlName="email" />
-        <mat-error>This field is required</mat-error>
-      </mat-form-field>
-
-      <mat-form-field appearance="fill" class="w-full">
-        <mat-label>Password</mat-label>
-        <input
-          id="password"
-          matInput
-          type="password"
-          formControlName="password"
-          #passwordField
-        />
+    <div class="flex justify-between items-center w-full">
+      <div class="font-bold text-gray-900 text-xl">Vietspeak</div>
+      <div class="flex items-center gap-2">
+        <div class="text-gray-400">Don't have an account yet?</div>
         <button
-          mat-icon-button
-          type="button"
-          (click)="
-            passwordField.type === 'password'
-              ? (passwordField.type = 'text')
-              : (passwordField.type = 'password')
-          "
-          matSuffix
+          class="btn--sm"
+          mat-flat-button
+          [color]="'primary'"
+          routerLink="/register"
         >
-          <mat-icon
-            class="icon-size-5"
-            *ngIf="passwordField.type === 'password'"
-            [svgIcon]="'mat_outline:visibility'"
-          ></mat-icon>
-          <mat-icon
-            class="icon-size-5"
-            *ngIf="passwordField.type === 'text'"
-            [svgIcon]="'mat_outline:visibility_off'"
-          ></mat-icon>
+          Register
         </button>
-        <mat-error> Password is required </mat-error>
-      </mat-form-field>
-      <div class="text-right">
-        <a routerLink="/forgot-password">Forgot password?</a>
       </div>
-      <button
-        class="w-full mt-6 btn--lg"
-        mat-flat-button
-        [color]="'primary'"
-      >
-        Login
-      </button>
-    </form>
+    </div>
+    <div
+      class="w-full max-w-md rounded-md sm:shadow sm:px-12 sm:py-12 sm:bg-white"
+    >
+      <div class="font-semibold text-gray-900 text-2xl mb-2">Login</div>
+      <alert [type]="'error'" class="mt-6">Invalid email or password</alert>
+      <form class="mt-8" [formGroup]="form" (ngSubmit)="submit()">
+        <mat-form-field appearance="fill" class="w-full">
+          <mat-label>Email</mat-label>
+          <input matInput formControlName="email" />
+          <mat-error>This field is required</mat-error>
+        </mat-form-field>
+
+        <mat-form-field appearance="fill" class="w-full">
+          <mat-label>Password</mat-label>
+          <input
+            id="password"
+            matInput
+            type="password"
+            formControlName="password"
+            #passwordField
+          />
+          <button
+            mat-icon-button
+            type="button"
+            (click)="
+              passwordField.type === 'password'
+                ? (passwordField.type = 'text')
+                : (passwordField.type = 'password')
+            "
+            matSuffix
+          >
+            <mat-icon
+              class="icon-size-5"
+              *ngIf="passwordField.type === 'password'"
+              [svgIcon]="'mat_outline:visibility'"
+            ></mat-icon>
+            <mat-icon
+              class="icon-size-5"
+              *ngIf="passwordField.type === 'text'"
+              [svgIcon]="'mat_outline:visibility_off'"
+            ></mat-icon>
+          </button>
+          <mat-error> This field is required </mat-error>
+        </mat-form-field>
+        <div class="text-right">
+          <a routerLink="/forgot-password">Forgot password?</a>
+        </div>
+        <button
+          class="w-full !mt-4 btn--lg"
+          mat-flat-button
+          [color]="'primary'"
+        >
+          <span *ngIf="!form.disabled"> Login </span>
+          <mat-progress-spinner
+            *ngIf="form.disabled"
+            [diameter]="24"
+            mode="indeterminate"
+          >
+          </mat-progress-spinner>
+        </button>
+      </form>
+    </div>
   </div>
 </div>
