update something new

--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -1,6 +1,6 @@
-<div class="w-full min-h-full flex flex-col items-center bg-gray-100">
+<div class="w-full min-h-full gap-4 flex flex-col items-center bg-gray-100">
   <div
-    class="w-full max-w-7xl px-4 flex flex-col gap-14 items-center justify-start pb-12 pt-4"
+    class="w-full max-w-7xl p-4 flex flex-col gap-14 items-center justify-start"
   >
     <div class="flex justify-between items-center w-full">
       <div class="font-bold text-gray-900 text-xl">Vietspeak</div>
@@ -16,32 +16,53 @@
         </button>
       </div>
     </div>
-    <div
-      class="w-full max-w-md rounded-md sm:shadow sm:px-12 sm:py-12 sm:bg-white"
-    >
-      <div class="font-semibold text-gray-900 text-2xl mb-1">
-        Forgot password
-      </div>
+    <div class="w-full max-w-md rounded-md sm:px-12 sm:py-12 sm:bg-white">
+      <div class="font-semibold text-2xl mb-2">Forgot password</div>
       <div class="text-secondary">Fill the form to reset your password</div>
 
-      <form class="mt-8" [formGroup]="form" (ngSubmit)="submit()">
+      <form
+        class="mt-8"
+        [formGroup]="forgotPasswordForm"
+        (ngSubmit)="submit()"
+        #forgotPasswordNgForm="ngForm"
+      >
+        <!-- Alert message -->
+        <alert *ngIf="alert?.message" [type]="alert?.type" class="mb-4">{{
+          alert?.message
+        }}</alert>
         <mat-form-field appearance="fill" class="w-full">
           <mat-label>Email</mat-label>
           <input matInput formControlName="email" />
-          <mat-error>This field is required</mat-error>
+          <mat-error
+            *ngIf="forgotPasswordForm.get('email')?.hasError('required')"
+            >This field is required</mat-error
+          >
+          <mat-error *ngIf="forgotPasswordForm.get('email')?.hasError('email')"
+            >Please enter a valid email</mat-error
+          >
         </mat-form-field>
 
         <button
           class="w-full !mt-2 btn--lg"
           mat-flat-button
           [color]="'primary'"
+          [disabled]="forgotPasswordForm.disabled"
         >
-          Reset password
+          <span *ngIf="!forgotPasswordForm.disabled"> Reset password </span>
+          <mat-progress-spinner
+            *ngIf="forgotPasswordForm.disabled"
+            [diameter]="24"
+            mode="indeterminate"
+          >
+          </mat-progress-spinner>
         </button>
-        <div class="text-hint mt-6 text-center">
+        <div class="text-hint mt-6">
           Back to <a routerLink="/login">Login</a>
         </div>
       </form>
     </div>
+  </div>
+  <div class="mt-auto text-gray-400 text-sm text-center p-4">
+    &copy; 2022 Vietspeak. All rights reserved.
   </div>
 </div>
