--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,4 +1,6 @@
-<div class="w-full min-h-full flex flex-col gap-4 items-center bg-gray-100 relative">
+<div
+  class="w-full min-h-full flex flex-col gap-4 items-center bg-gray-100 relative"
+>
   <div
     class="w-full max-w-7xl p-4 flex flex-col gap-14 items-center justify-start"
   >
@@ -16,17 +18,24 @@
         </button>
       </div>
     </div>
-    <div
-      class="w-full max-w-md rounded-md sm:px-12 sm:py-12 sm:bg-white"
-    >
+    <div class="w-full max-w-md rounded-md sm:px-12 sm:py-12 sm:bg-white">
       <div class="font-semibold text-gray-900 text-2xl mb-2">Register</div>
 
-      <form class="mt-8" [formGroup]="form" (ngSubmit)="submit()">
+      <form
+        class="mt-8"
+        [formGroup]="registerForm"
+        (ngSubmit)="submit()"
+        #registerNgForm="ngForm"
+      >
         <mat-form-field appearance="fill" class="w-full">
           <mat-label>Email</mat-label>
           <input matInput formControlName="email" />
-          <!-- <mat-error>This field is required</mat-error> -->
-          <mat-error>Please enter a valid email</mat-error>
+          <mat-error *ngIf="registerForm.get('email')?.hasError('required')"
+            >This field is required</mat-error
+          >
+          <mat-error *ngIf="registerForm.get('email')?.hasError('email')"
+            >Please enter a valid email</mat-error
+          >
         </mat-form-field>
         <mat-form-field appearance="fill" class="w-full">
           <mat-label>Password</mat-label>
@@ -57,7 +66,14 @@
               [svgIcon]="'mat_outline:visibility_off'"
             ></mat-icon>
           </button>
-          <mat-error> This field is required </mat-error>
+          <mat-error *ngIf="registerForm.get('password')?.hasError('required')">
+            This field is required
+          </mat-error>
+          <mat-error
+            *ngIf="registerForm.get('password')?.hasError('minlength')"
+          >
+            Password must be at least 6 characters long
+          </mat-error>
         </mat-form-field>
         <mat-form-field appearance="fill" class="w-full">
           <mat-label>Confirm password</mat-label>
@@ -88,18 +104,34 @@
               [svgIcon]="'mat_outline:visibility_off'"
             ></mat-icon>
           </button>
-          <mat-error> This field is required </mat-error>
+          <mat-error
+            *ngIf="registerForm.get('confirmPassword')?.hasError('required')"
+          >
+            This field is required
+          </mat-error>
+          <mat-error
+            *ngIf="registerForm.get('confirmPassword')?.hasError('mustMatch')"
+          >
+            Password and Confirm password must match
+          </mat-error>
         </mat-form-field>
         <div class="mt-2 text-secondary">
-          By creating an account, you agree to the <a>Terms of Service</a> and <a>Privacy Policy</a>.
+          By creating an account, you agree to the <a>Terms of Service</a> and
+          <a>Privacy Policy</a>.
         </div>
         <button
           class="w-full !mt-6 btn--lg"
           mat-flat-button
           [color]="'primary'"
+          [disabled]="registerForm.disabled"
         >
-          Register
-          <!-- <mat-progress-spinner mode="indeterminate"> </mat-progress-spinner> -->
+          <span *ngIf="!registerForm.disabled"> Register </span>
+          <mat-progress-spinner
+            *ngIf="registerForm.disabled"
+            [diameter]="24"
+            mode="indeterminate"
+          >
+          </mat-progress-spinner>
         </button>
       </form>
     </div>
